<resources>
    <string name="app_name">Songs</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="action_main">All Lyrics</string>
    <string name="action_mySongs">My Uploads</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_songs">My Songs</string>
    <string name="title_activity_songs_detail">SongsDetailActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">Search</string>
    <string name="action_search">Search</string>
    <string name="section_title">Lyrics</string>
    <string name="action_playList">Listen</string>
    <string name="action_library">My Library</string>
    <string name="title_activity_play_list">PlayListActivity</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>
